# wgpu-sandbox

./: Cargo.toml
src/: app.rs  graphics.rs  main.rs  vertices.rs
src/sandbox/: mod.rs
src/sandbox/camera2d/: camera.rs  mod.rs  shader.wgsl
src/sandbox/primitives/: mod.rs  shader.wgsl
src/sandbox/quad/: mod.rs  shader.wgsl
src/sandbox/texture/: mod.rs  shader.wgsl  texture.rs
src/sandbox/triangle/: mod.rs  shader.wgsl
src/sandbox/uniform/: mod.rs  shader.wgsl
