[package]
name = "wgpu-sandbox"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
glam = "0.29.2"
log = "0.4.22"
pollster = "0.4.0"
wgpu = "23.0.1"
winit = "0.30.7"
zune-jpeg = "0.4.14"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
winit = { version = "0.30.7", features = ["android-native-activity"] }


[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
target_sdk_version = 29
min_sdk_version = 26
